--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -6,6 +6,11 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:80/admin/;
+    }
+
     location /api/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:80/api/;
