--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,10 @@
-FROM python:3.9
+FROM python:3.9-slim
 
 WORKDIR /app
 
 COPY requirements.txt .
+
+RUN pip install --upgrade pip
 
 RUN pip install -r requirements.txt --no-cache-dir
 
