--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ idna==3.4
 oauthlib==3.2.2
 packaging==23.1
 Pillow==10.1.0
+# psycopg2==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 python-dotenv==1.0.0
