--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.2.0
 cryptography==41.0.4
 defusedxml==0.7.1
 Django==3.2.3
+django-colorfield==0.10.1
 django-filter==23.3
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
