--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,8 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 djoser==2.2.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
 gunicorn==21.2.0
 idna==3.4
 oauthlib==3.2.2
