--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ drf-extra-fields==3.7.0
 filetype==1.2.0
 gunicorn==21.2.0
 idna==3.4
+isort==5.12.0
 oauthlib==3.2.2
 packaging==23.1
 Pillow==10.1.0
