--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,38 +1,38 @@
 server { 
-     listen 80; 
-     server_tokens off; 
+    listen 80; 
+    server_tokens off; 
      
-     location /api/docs/ { 
-         root /app/static/; 
-         try_files $uri $uri/redoc.html; 
-     }
+    location /api/docs/ { 
+        root /app/static/; 
+        try_files $uri $uri/redoc.html; 
+    }
 
-     location /api/ { 
-       proxy_pass http://backend:80; 
-       proxy_set_header          Host $host; 
-     } 
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:9000/api/;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:9000/admin/;
+    }
   
-     location /admin/ { 
-       proxy_pass http://backend:80; 
-       proxy_set_header          Host $host; 
-     } 
+    location /media/ { 
+        alias /app/media/; 
+    } 
   
-     location /media/ { 
-         alias /app/media/; 
-     } 
-  
-     location / { 
-         root /app/static/; 
-         index  index.html index.htm; 
-         try_files $uri /index.html; 
-         proxy_set_header        Host $host; 
-         proxy_set_header        X-Real-IP $remote_addr; 
-         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for; 
-         proxy_set_header        X-Forwarded-Proto $scheme; 
-       } 
-       error_page   500 502 503 504  /50x.html; 
-       location = /50x.html { 
-         root   /var/html/frontend/; 
-       } 
-  
- }
+    location / { 
+        root /app/static/; 
+        index  index.html index.htm; 
+        try_files $uri /index.html; 
+        proxy_set_header        Host $host; 
+        proxy_set_header        X-Real-IP $remote_addr; 
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for; 
+        proxy_set_header        X-Forwarded-Proto $scheme; 
+    } 
+    
+    error_page   500 502 503 504  /50x.html; 
+    location = /50x.html { 
+    root   /var/html/frontend/; 
+    } 
+}
