--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 server { 
     listen 80; 
+    server_name 51.250.23.239
     server_tokens off; 
      
     location /api/docs/ { 
@@ -19,7 +20,7 @@ server {
   
     location /media/ { 
         proxy_set_header Host $http_host;
-        alias /app/media/; 
+        root /var/html; 
     } 
   
     location / { 
