--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Main Foodgram-project-react
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   tests:
     runs-on: ubuntu-latest
