--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,89 +35,90 @@ jobs:
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run:
+        cd backend/
         python manage.py test
 
-  # build_and_push_to_docker_hub:
-  #   name: Push Docker image to DockerHub
-  #   runs-on: ubuntu-latest
-  #   needs: tests
-  #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v3
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
-  #     - name: Login to Docker 
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-  #     - name: Push to DockerHub
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: ./backend/
-  #         push: true
-  #         tags: ubilby/kittygram_backend:latest
+  build_and_push_to_docker_hub:
+    name: Push Docker image to DockerHub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+          tags: ubilby/ya_p_final_backend:latest
 
-  # front_tests:
-  #   runs-on: ubuntu-latest
+  front_tests:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - name: Set up nodeJS
-  #     uses: actions/setup-node@v3
-  #     with:
-  #       node-version: 18
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up nodeJS
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
 
-  #   - name: Install dependencies
-  #     run: |
-  #       cd frontend/
-  #       npm ci
+    - name: Install dependencies
+      run: |
+        cd frontend/
+        npm ci
 
-  #   - name: Test frontend
-  #     run: |
-  #       cd frontend/
-  #       npm run test
+    - name: Test frontend
+      run: |
+        cd frontend/
+        npm run test
 
-  # build_frontend_and_push_to_docker_hub:
-  #   name: Push frontend Docker image to DockerHub
-  #   runs-on: ubuntu-latest
-  #   needs: front_tests
-  #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v3
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
-  #     - name: Login to Docker 
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-  #     - name: Push to DockerHub
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: ./frontend/
-  #         push: true
-  #         tags: ubilby/taski_frontend:latest
+  build_frontend_and_push_to_docker_hub:
+    name: Push frontend Docker image to DockerHub
+    runs-on: ubuntu-latest
+    needs: front_tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend/
+          push: true
+          tags: ubilby/ya_p_final_frontend:latest
 
-  # build_gateway_and_push_to_docker_hub:
-  #   name: Push gateway Docker image to DockerHub
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v3
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
-  #     - name: Login to Docker 
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-  #     - name: Push to DockerHub
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: ./nginx/
-  #         push: true
-  #         tags: ubilby/taski_gateway:latest
+  build_gateway_and_push_to_docker_hub:
+    name: Push gateway Docker image to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./nginx/
+          push: true
+          tags: ubilby/ya_p_final_gateway:latest
 
   # deploy:
   #   runs-on: ubuntu-latest
