--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,8 +127,10 @@ jobs:
         script: |
           cd foodgram-project-react
           sudo docker compose -f docker-compose.production.yml pull
-          sudo docker compose -f docker-compose.production.yml down
+          sudo docker compose -f docker-compose.production.yml stop
           sudo docker compose -f docker-compose.production.yml up -d
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /app/staic/static/
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /app/static/static/
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py add_tags
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py import_ingredients
