--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
         pip install -r ./backend/requirements.txt 
     - name: Test with django tests
       env:
-        POSTGRES_USER: django_user
-        POSTGRES_PASSWORD: django_password
-        POSTGRES_DB: django_db
+        POSTGRES_USER: user
+        POSTGRES_PASSWORD: user
+        POSTGRES_DB: final
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run: |
