--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ server {
   
     location /media/ { 
         proxy_set_header Host $http_host;
-        root /var/html; 
+        root /app; 
     } 
   
     location / { 
